[tool.poetry]
name = "dol-hacking"
version = "0.1.0"
description = ""
authors = ["Gregory Lumen <Sharru.kin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = "^9.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
